@@ -80,6 +80,7 @@ Engine fixes:
 * Fix static events not executing on the same frame as on_load events.
 * Fix parsing bug in power trees that would save base power properties to an upgrade power.
 * Fix on_load events with requires_class not working in maps/spawn.txt
+* Fix timing of Effects so that the first "tick" happens immediately.
 
 Game updates:
 
